Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntObjNumObjField.quorum
class Main
    Number n
    Integer int
    action main
        n:setValue(7.5)
        int = cast(Integer, n)
        if int:GetValue() = 7
            output "passed"
        end
    end
end