Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjNumObjField.quorum
class Main
    Number n
    Integer int
    action main
        n:SetValue(7.5)
        int = cast(Integer, n)
    end
end